Fix spacing on right panel
Bottom left needs to be arranged.

--- a/styles.css
+++ b/styles.css
@@ -101,10 +101,21 @@ div {
     background-color: white;
 }
 
+.pad_left {
+    padding-left: 2vw;
+}
+
+.pad_bottom {
+    padding-bottom: 5vh;
+}
+
+.pad_top{
+    padding-top: 5vh;
+}
+
 #left_panel {
     background: url(images/bg_image.jpg);
     background-size: cover;
-    /* z-index: -1; */
 }
 
 .panel {
@@ -117,15 +128,10 @@ div {
 
 .right {
     width: calc((80vw / 3 * 2) * 0.9);
+}
+
+.right_section {
     height: calc(100vh / 3);
-}
-
-.pad_right {
-    padding-left: 2vw;
-}
-
-.pad_bottom {
-    padding-bottom: 5vh;
 }
 
 #right_middle {
@@ -134,16 +140,26 @@ div {
 
 #right_mid_header {
     align-items: center;
+    height: calc((100vh / 3) * 0.15);
 }
 
-#row_container {
+#column_container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     height: calc((100vh / 3) * 0.85);
 }
 
-.row {
-    height: calc(((100vh / 3) * 0.85) / 3);
+.column {
+    width: calc(((80vw / 3 * 2) * 0.9) / 2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.form_input {
+    display: flex;
+    flex-direction: column;
+    height: (calc((100vh / 3) * 0.85) / 3)
 }
 
 .relative_positioned {
@@ -223,4 +239,9 @@ h1 {
 
 label {
     font-size: 0.5rem;
+}
+
+#right_bottom {
+    display: flex;
+    flex-direction: column;
 }
